tests/error/union_global_static.gw
// [contains] 'private' can only be used at class scope.
private union { int i; };
